<resources>
    <string name="app_name">Madarsoft task</string>
    <string name="add_user">Add User</string>
    <string name="name">Name</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="_1">1</string>
    <string name="title">Title</string>
    <string name="gender">Gender</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="textview">TextView</string>
    <string name="display_saved_data">Display Saved Data</string>
    <string name="user_added_successfully" >User Added Successfully</string>
    <string name="saved_users_list">Saved Users List</string>
    <string name="no_users">No Users Found</string>
</resources>
